--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Urbanist", sans-serif;
+  font-family: 'Be Vietnam Pro', sans-serif;
   font-size: 16px;
 }
 
@@ -35,8 +36,8 @@ body {
   background-repeat: no-repeat;
 }
 
-.firebird-chain-bg {
-  background-image: url("/images/home/firebird_chain.png");
+.gamefi_market_bg {
+  background-image: url("/images/home/gamefi_market.png");
   background-size: auto 100%;
   background-repeat: no-repeat;
   background-position: center;
@@ -63,6 +64,24 @@ body {
 
 .footer_bg {
   background-image: url("/images/footer_bg.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.portfolio_bg {
+  background-image: url("/images/portfolio/banner_bg.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.token_airdrop_bg {
+  background-image: url("/images/home/token_airdrop.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.front_running_bg {
+  background-image: url("/images/home/front_running.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
