--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,104 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 200;
+  src: url("/font/BeVietnam-Thin.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 200;
+  font-style: italic;
+  src: url("/font/BeVietnam-ThinItalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 300;
+  src: url("/font/BeVietnam-Light.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 300;
+  font-style: italic;
+  src: url("/font/BeVietnam-LightItalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 400;
+  src: url("/font/BeVietnam-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 400;
+  font-style: italic;
+  src: url("/font/BeVietnam-Italic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 500;
+  src: url("/font/BeVietnam-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 500;
+  font-style: italic;
+  src: url("/font/BeVietnam-MediumItalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 600;
+  src: url("/font/BeVietnam-SemiBold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 600;
+  font-style: italic;
+  src: url("/font/BeVietnam-SemiBoldItalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 700;
+  src: url("/font/BeVietnam-Bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 700;
+  font-style: italic;
+  src: url("/font/BeVietnam-BoldItalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 900;
+  src: url("/font/BeVietnam-ExtraBold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Be Vietnam";
+  font-weight: 900;
+  font-style: italic;
+  src: url("/font/BeVietnam-ExtraBoldItalic.woff") format("woff");
+}
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Be Vietnam Pro", sans-serif;
+  font-weight: 400;
+  font-family: "Be Vietnam", sans-serif;
   font-size: 16px;
 }
 
@@ -131,6 +221,31 @@ select[disabled] {
   mix-blend-mode: lighten;
 }
 
+.bg-card {
+  position: relative;
+}
+
+.bg-card:hover .bg-hover-card {
+  display: flex;
+}
+
+.bg-hover-card {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 20;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.bg-hover-card-big {
+  display: none !important;
+}
+
 @media (max-width: 767px) {
   .home-top-banner {
     background-image: url("/images/home/top_bg_mobile.png");
@@ -143,5 +258,9 @@ select[disabled] {
 
   .powered-bg {
     background-image: url("/images/home/powered_bg_mobile.png");
+  }
+
+  .bg-card:hover .bg-hover-card-big {
+    display: flex !important;
   }
 }
