--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,17 +68,25 @@ body {
 }
 
 .working-process-content-bg-left {
-  background-image: url("/images/home/working_process_bg_left.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background: linear-gradient(
+    180deg,
+    #c1e1ff -20.76%,
+    #61b2ff 0.49%,
+    #0083ff 21.99%,
+    #01289d 100%
+  );
+  border-radius: 24px;
 }
 
 .working-process-content-bg-right {
-  background-image: url("/images/home/working_process_bg_right.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background: linear-gradient(
+    180deg,
+    #c1e1ff -20.76%,
+    #61b2ff 0.49%,
+    #0083ff 21.99%,
+    #01289d 100%
+  );
+  border-radius: 24px;
 }
 
 select {
@@ -132,4 +140,20 @@ input[type="checkbox"]:checked {
 
 input[type="checkbox"]:checked::before {
   transform: scale(0.7);
+}
+
+@media (min-width: 1024px) {
+  .working-process-content-bg-left {
+    background-image: url("/images/home/working_process_bg_left.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .working-process-content-bg-right {
+    background-image: url("/images/home/working_process_bg_right.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
 }
