--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,6 @@
   font-size: 16px;
 }
 
-html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
@@ -156,4 +155,25 @@ input[type="checkbox"]:checked::before {
     background-position: center;
     background-size: cover;
   }
+}
+
+.custom-scrollbar {
+  &::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: #0030c0;
+    border-radius: 10px;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background: #0030c0;
+  }
+}
+
+button {
+  text-transform: capitalize;
 }
