--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   background: "#F9F9F9";
+  text-transform: capitalize;
 }
 
 .btn-fill-gradient {
