--- a/styles/globals.css
+++ b/styles/globals.css
@@ -168,7 +168,7 @@ input[type="checkbox"]:checked::before {
     border-radius: 10px;
   }
   &::-webkit-scrollbar-thumb {
-    background: #0030c0;
+    background: #0030C0;
     border-radius: 10px;
   }
   &::-webkit-scrollbar-thumb:hover {
